Adds CsvReader demo